apply plugin: "java-library"

repositories {
	mavenLocal()
	mavenCentral()
	maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
	maven { url "https://oss.sonatype.org/content/repositories/releases/" }
	maven { url "https://jitpack.io" }
	jcenter()
}

version = "1.6.1"

sourceCompatibility = 8
targetCompatibility = 8

ext {
}

dependencies {
}